[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moa-dropout-reproducibility"
version = "1.0.0"
description = "Non-proprietary statistical templates for mode-specific fetal heart rate dropout analyses"
requires-python = ">=3.10"
authors = [{name = "Debjyoti Karmakar"}]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.1",
    "statsmodels>=0.14",
    "lifelines>=0.30",
    "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
where = ["src"]
